--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,10 @@
   color-scheme: dark;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body, html {
   height: 100%;
   min-height: 100%;
@@ -96,6 +100,10 @@ nav a.link-active span {
 
 @keyframes slide-to-left {
   to { transform: translateX(-30px); }
+}
+
+.projects-list img {
+  contain: layout;
 }
 
 ::view-transition-old(sidebar) {
